--- a/exercise-2-productivity-tricks/.vscode/settings.json
+++ b/exercise-2-productivity-tricks/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#621ab9",
-    "activityBar.activeBorder": "#1c0f04",
-    "activityBar.background": "#621ab9",
+    "activityBar.activeBackground": "#8823c5",
+    "activityBar.activeBorder": "#bd8322",
+    "activityBar.background": "#8823c5",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
-    "activityBarBadge.background": "#1c0f04",
-    "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#4a148c",
-    "statusBar.border": "#4a148c",
+    "activityBarBadge.background": "#bd8322",
+    "activityBarBadge.foreground": "#15202b",
+    "statusBar.background": "#6a1b9a",
+    "statusBar.border": "#6a1b9a",
     "statusBar.foreground": "#e7e7e7",
-    "statusBarItem.hoverBackground": "#621ab9",
-    "titleBar.activeBackground": "#4a148c",
+    "statusBarItem.hoverBackground": "#8823c5",
+    "titleBar.activeBackground": "#6a1b9a",
     "titleBar.activeForeground": "#e7e7e7",
-    "titleBar.border": "#4a148c",
-    "titleBar.inactiveBackground": "#4a148c99",
+    "titleBar.border": "#6a1b9a",
+    "titleBar.inactiveBackground": "#6a1b9a99",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "4A148C"
+  "peacock.color": "6A1B9A"
 }
