--- a/exercise-5-docker/start/docker-compose.yml
+++ b/exercise-5-docker/start/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.4'
+version: "3.4"
 
 services:
   start:
@@ -8,3 +8,7 @@ services:
       NODE_ENV: production
     ports:
       - 3000
+    links:
+      - mongo
+  mongo:
+    image: "mongo"
