--- a/exercise-5-docker/start/.vscode/launch.json
+++ b/exercise-5-docker/start/.vscode/launch.json
@@ -1,11 +1,8 @@
 {
-  "configurations": [
-    {
-      "name": "Docker Node.js Launch",
-      "type": "docker",
-      "request": "launch",
-      "preLaunchTask": "docker-run: debug",
-      "platform": "node"
-    }
-  ]
+  "configurations": [{
+    "type": "node",
+    "request": "attach",
+    "name": "Docker: Attach to Node",
+    "remoteRoot": "/usr/src/app"
+  }]
 }
